<resources>
    <!-- Basicos de la App -->
    <string name="app_name">PhotoMapp</string>
    <string name="preferencias">Preferencias</string>
    <string name="mapa">Mapa</string>

    <!-- Texto de Toasts -->
    <string name="permiso_camara_denegado">Sin acceso a la cámara</string>
    <string name="permiso_ubicacion_denegado">Sin acceso a la ubicación</string>
    <string name="permiso_almacenamiento_denegado">Sin acceso al almacenamiento</string>
    <string name="captura_imagen_fallida">Error configurando captura de imagen</string>
    <string name="toast_foto_tomada">Guardando</string>
    <string name="toast_foto_no_tomada">No se pudo guardar :(</string>
    <string name="no_escritura_posible">No es posible guardar la foto</string>
    <string name="no_hay_ubicacion">No se encuentra la ubicacion</string>

    <!-- Texto en dialogos -->
    <string name="titulo_dialogo_nombre_foto">Nombre de la Foto</string>
    <string name="titulo_dialogo_permiso_almacenamiento">Permiso Almacenamiento</string>
    <string name="mensaje_dialogo_permiso_almacenamiento">Para poder guardar y leer las fotografías es necesario que permitas el acceso al almacenamiento externo.</string>
    <string name="titulo_dialogo_permiso_camara">Permiso Cámara</string>
    <string name="mensaje_dialogo_permiso_camara">Para poder tomar fotografías es necesario que permitas el acceso a la cámara.</string>
    <string name="titulo_dialogo_permiso_ubicacion">Permiso Ubicación</string>
    <string name="mensaje_dialogo_permiso_ubicacion">Para poder agregar tus fotografías al mapa de Photomapp es necesario que permitas el acceso a la ubicación.</string>

    <!-- Descripciones de Vistas-->
    <string name="descripcion_icono_direcciones">Boton que lanzaun intent para mostrar la direcciónde la foto seleccionada en otro mapa.</string>
    <string name="descripcion_foto_grande">Vista que muestra el zoom de la foto seleccionada.</string>
    <string name="descripcion_foto">Vista que utiliza el adaptador para mostrar las fotos.</string>
    <string name="descripcion_foto_tomada">Muestra la foto recién tomada por unos instantes</string>

    <!-- Etiqueta de hilo -->
    <string name="nombre_hilo_camara">Hilo Camara</string>

    <!-- Preferencias -->
    <string name="preferencias_categoria_fotografias">Fotografías</string>
    <string name="preferencias_categoria_fotografias_key">categoria_fotografias</string>
    <string name="preferencias_categoria_ubicacion">Ubicación</string>
    <string name="preferencias_categoria_ubicacion_key">categoria_ubicacion</string>
    <string name="preferencia_autonombrar_fotos_key">autonombrar_fotos</string>
    <string name="preferencia_autonombrar_fotos_titulo">Autonombrar Fotos</string>
    <string name="preferencia_autonombrar_fotos_descripcion">Nombrar tus fotos de acuerdo a la fecha actual</string>
    <string name="preferencia_flash_key">usar_flash</string>
    <string name="preferencia_flash_titulo">Activar Flash Automático</string>
    <string name="preferencia_flash_descripcion">Usar flash si se detecta un ambiente oscuro</string>
    <string name="preferencia_utilizar_gps_key">utilizar_gps</string>
    <string name="preferencia_utilizar_gps_titulo">Utilizar GPS</string>
    <string name="preferencia_utilizar_gps_descripcion">El GPS dá una ubicación más exacta, pero gasta más batería</string>

    <!-- Google Maps -->
    <string name="maps_API_key">AIzaSyArO8QKclhzidkWZAmD-ptKXQLTr3QLpg0</string>
    <string name="google_app_id">absolute-pulsar-122006</string>

    <!-- Formato texto -->
    <string name="nombre_foto_formato_fecha">ddMMyyyyHHmmss</string>
    <string name="base_datos_formato_fecha">dd-MM-yyyy</string>
    <string name="ejemplo_nombre_autocompletado">ddmmaaaahhmmPhotoMapp</string>


    <!-- Leyendas -->
    <string name="texto_direccion">Dirección</string>
    <string name="texto_ciudad">Ciudad</string>
    <string name="texto_fecha">Fecha</string>

    <!-- Items menus -->
    <string name="borrar">Borrar</string>
    <string name="galeria">Ver en Galería</string>
    <string name="editar">Editar</string>
    <string name="mapas">Ver en Mapas</string>

    <!-- Palabras descripciones -->
    <string name="actualizado">Actualizado</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>

</resources>
