<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimary"
        android:text="@string/titulo_dialogo_nombre_foto"
        android:id="@+id/titulo_dialogo_nombre_foto"
        android:layout_gravity="center_horizontal"
        android:padding="7dp"
        android:gravity="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nombre_foto_dialogo"
        android:layout_gravity="center_horizontal"
        android:layout_margin="7dp"
        android:hint="@string/ejemplo_nombre_autocompletado"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/boton_aceptar_dialogo"
        android:layout_margin="7dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>