<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/contenedor"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                tools:context=".Activities.ActivityMapa"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

            <TextView
                style="@style/TextoDescripcionImagen"
                android:text="@string/texto_direccion"
                android:id="@+id/direccion_imagen"
                android:layout_alignParentEnd="true"
                android:visibility="gone"/>

            <TextView
                style="@style/TextoDescripcionImagen"
                android:text="@string/texto_ciudad"
                android:id="@+id/ciudad_imagen"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/direccion_imagen"
                android:visibility="gone" />

            <TextView
                style="@style/TextoDescripcionImagen"
                android:text="@string/texto_fecha"
                android:id="@+id/fecha_imagen"
                android:layout_below="@+id/ciudad_imagen"
                android:layout_alignParentEnd="true"
                android:visibility="gone" />

            <ImageButton
                android:layout_width="wrap_content"
                android:background="@color/invisible"
                android:layout_height="wrap_content"
                android:id="@+id/ic_direcciones"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@mipmap/ic_direcciones"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:paddingBottom="3dp"
                android:visibility="gone"
                android:onClick="mostrarDirecciones"
                android:contentDescription="@string/descripcion_icono_direcciones" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/imagen_ampliada"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:contentDescription="@string/descripcion_foto_grande" />


    </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lista_fotos"
        android:scrollbars="vertical"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>