<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/foto_seleccionada"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/descripcion_foto_grande" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/texto_ciudad"
            android:textColor="@color/color_blanco"
            android:id="@+id/nombre_ciudad_foto"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/texto_fecha"
            android:textColor="@color/color_blanco"
            android:id="@+id/fecha_foto"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

</LinearLayout>